--- a/src/App.css
+++ b/src/App.css
@@ -11,9 +11,10 @@
 nav {
   background-color: #001d93;
   width: 100%;
-  height: 70px;
+  height: 80px;
   display: flex;
   align-items: center;
+  margin-bottom: 40px;
 }
 
 .logo-container {
@@ -36,4 +37,10 @@ nav {
   width: 90%;
   height: auto;
   margin: 0 auto;
+}
+
+footer {
+  background-color: #353535;
+  width: 100%;
+  height: 70px;
 }
