--- a/src/components/Pokemon/Pokemon.css
+++ b/src/components/Pokemon/Pokemon.css
@@ -1,16 +1,50 @@
 .pokemon-card {
   border-radius: 25px;
   background: #e8e8e8;
-  box-shadow: 10px 10px 20px #aeaeae, -10px -10px 20px #ffffff;
+  box-shadow: 10px 10px 10px #aeaeae, -10px -10px 10px #ffffff;
   height: 300px;
   width: 250px;
   margin: 15px 15px;
 }
 
 .card-header {
+  padding: 10px 0;
   width: 100%;
+  height: auto;
+  text-align: center;
+  background-color: #e0e0e0;
+  border-top-left-radius: 25px;
+  border-top-right-radius: 25px;
+  position: relative;
+  overflow: hidden;
 }
 
 .card-header img {
-  object-fit: cover;
+  object-fit: contain;
+  height: 100px;
+  position: relative;
+  z-index: 1;
+}
+
+.card-header span {
+  position: absolute;
+  top: 10px;
+  left: -10px;
+  color: rgba(155, 154, 154, 0.1);
+  font-weight: 700;
+  font-size: 150px;
+}
+
+.card-body {
+  padding: 10px 20px;
+}
+
+.card-body h3 {
+  text-transform: uppercase;
+  color: #353535;
+}
+
+.card-body span {
+  font-size: 12px;
+  color: #353535;
 }
