--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,52 @@
   min-width: 100%;
   min-height: 100vh;
   background-color: #e8e8e8;
+  position: relative;
+}
+
+.modal-overlay {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: 900;
+  background-color: rgb(53, 53, 53, 0.8);
+  display: none;
+}
+
+.show {
+  display: block;
+}
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 999;
+  background-color: #e8e8e8;
+  min-width: 80vw;
+  min-height: 90%;
+}
+.modal-header {
+  width: 100%;
+  height: 50px;
+  display: flex;
+  justify-content: flex-end;
+}
+.modal-header img {
+  width: 20px;
+  margin-right: 20px;
+  cursor: pointer;
+}
+.modal-body {
+  width: 100%;
+  display: flex;
+}
+
+.modal-body .image-container {
+  flex: 3;
+}
+.modal-body .info-container {
+  flex: 7;
 }
 .container {
   width: 80%;
@@ -43,4 +89,16 @@ footer {
   background-color: #353535;
   width: 100%;
   height: 70px;
+}
+footer {
+  color: #fff;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+}
+
+footer a {
+  font-size: 12px;
+  color: #fff;
 }
