--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -7,13 +7,12 @@
   background-color: #e8e8e8;
   min-width: 80vw;
   min-height: 90%;
-  padding: 0 30px;
+  padding: 40px 60px;
 }
 .modal-header {
   width: 100%;
   height: 50px;
   display: flex;
-  justify-content: flex-end;
 }
 .modal-header img {
   width: 20px;
@@ -120,11 +119,10 @@
   border-radius: 10px;
   height: 16px;
 }
-
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 1024px) {
   .modal {
     min-width: 90%;
-    padding: 0 14px;
+    padding: 20px 40px;
     overflow-y: scroll;
   }
   .modal-body {
